	defining the environment variable LRKLAUS
	* src/SDCCBBlock.h
	* src/SDCCloop.c
	* src/SDCClrange.c
	* src/ds390/ralloc.c (spillThis): applied Klaus' patch
	* clean.mk: fixed removal of files in bin/CVS/
	* device/lib/clean.mk: fixed removal of directories small and large
	* support/Util/SDCCerr.c: changed W_INT_OVL to ERROR_LEVEL_PEDANTIC

2003-10-05  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex, support/Util/SDCCerr.c, sdcc/support/Util/SDCCerr.h:
	  Fixed bug #816692: introduced new ERROR_LEVEL_PEDANTIC warning
	  message "unmatched #pragma SAVE and #pragma RESTORE"

2003-10-04  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: various additions and updates (interrupts, inline
	  assembly, critical functions, atomic, nojtbound)

2003-10-04 Bernhard Held <bernhard@bernhardheld.de>

	Applied liferange patch from Klaus Flittner <klaus_flittner@gmx.de>
	* src/SDCCBBlock.h
	* src/SDCCloop.c
	* src/SDCCloop.h
	* src/SDCClrange.c

2003-10-03  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.h,
	* src/z80/gen.c (aopOp, aopGet, aopPut, genDummyRead),
	* src/mcs51/gen.h
	* src/mcs51/gen.c (aopOp, aopGet, aopPut, genDummyRead),
	* src/ds390/gen.h
	* src/ds390/gen.c (aopOp, aopGet, aopPut, genDummyRead),
	* src/SDCCicode.c (ast2iCode, geniCodeDummyRead): Fixed bug #663539
	* src/SDCCopt.c (killDeadCode): Fixed bugs #663539 & #816705

2003-10-02  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (genRet): fixed bug #524753
	* src/z80/gen.c (genCast): fixed internal error on cast from
	pointer to long
	* src/z80/gen.c (_saveRegsForCall, emitCall): adapted Johan's
	fix for bug #477835 to the z80
	* src/z80/gen.c (genZ80code, _vemit2, _emit2): added support
	for tracking iCodes in the peephole optimizer for z80

2003-10-01  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeJumpTable, geniCodeSwitch): fixed
	the other part of bug #814548
	* src/SDCCpeeph.c (labelInRange): fixed bug #814558
